--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -5,30 +5,33 @@
 //   height: 60px;
 // }
 
-// .main-header {
-//   @include flexOne(space-evenly);
-//   @include font();
-//   width: 100%;
-//   background-color: white;
-//   position: fixed;
-// }
+.main-header, h2 {
+  @include font();
+  color: black;
+  align-items: center;
+  display: flex;
+  justify-content: space-evenly;
+}
 
-// // .main-header:hover, .main-header:focus {
-// //     font-weight: bolder;
-// //     color: rosybrown;
-// // }
+.main-header:hover,
+.main-header:focus {
+  font-weight: bolder;
+  color: rosybrown;
+}
 
-// h1 {
-//   color: $rosyBrown;
-//   cursor: pointer;
-//   font-weight: 200;
-//   font-size: 25px;
-//   text-transform: uppercase;
-// }
+h1 {
+  color: $rosyBrown;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 65px;
+  text-transform: uppercase;
+text-align: center;
+}
 
-// h1:hover {
-//   color: $palePink;
-// }
+
+h2:hover {
+  color: $palePink;
+}
 
 // a {
 //   text-decoration: none;
